--- a/app/src/main/res/layout/fragment_client_edit.xml
+++ b/app/src/main/res/layout/fragment_client_edit.xml
@@ -1,6 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="br.com.abraao.timesheet.ClientEditFragment">
+    android:layout_height="match_parent" tools:context="br.com.abraao.timesheet.ClientEditFragment"
+    android:id="@+id/client_edit_layout"
+    android:tag="client_edit_tag"
+    >
 
 
     <LinearLayout
@@ -67,12 +70,12 @@
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:id="@+id/btn_remove_client"
-        android:background="@drawable/circle"
+        android:background="@drawable/warnbtn"
         android:elevation="10dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="64dp"
         android:layout_marginLeft="16dp"
         android:layout_gravity="start|bottom"
-        android:src="@android:drawable/ic_menu_save"
+        android:src="@android:drawable/ic_menu_delete"
         />
 </FrameLayout>
