--- a/app/src/main/res/layout/fragment_client_list.xml
+++ b/app/src/main/res/layout/fragment_client_list.xml
@@ -10,7 +10,7 @@
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
         android:layout_height="match_parent" android:gravity="center" />
 
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+    <android.support.design.widget.FloatingActionButton android:id="@+id/btn_add_client"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_marginBottom="64dp"
