--- a/app/src/main/res/layout/fragment_task_edit.xml
+++ b/app/src/main/res/layout/fragment_task_edit.xml
@@ -1,9 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="br.com.abraao.timesheet.ClientListFragment"
-    android:id="@+id/client_edit_layout"
-    android:tag="client_edit_tag"
-    >
+    android:layout_height="match_parent" tools:context="br.com.abraao.timesheet.TaskFragment">
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,7 +14,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/name_label"
-            android:id="@+id/textView"
+            android:id="@+id/label_task_name"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
@@ -28,7 +25,7 @@
         <EditText
             android:layout_width="353dp"
             android:layout_height="wrap_content"
-            android:id="@+id/txt_name"
+            android:id="@+id/txt_task_name"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:inputType="text" />
@@ -38,7 +35,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/code_label"
-            android:id="@+id/textView2"
+            android:id="@+id/label_task_code"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
@@ -47,7 +44,7 @@
         <EditText
             android:layout_width="353dp"
             android:layout_height="wrap_content"
-            android:id="@+id/txt_code"
+            android:id="@+id/txt_task_code"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:inputType="text" />
@@ -57,7 +54,7 @@
     <ImageButton
         android:layout_width="65dp"
         android:layout_height="65dp"
-        android:id="@+id/btn_save_client"
+        android:id="@+id/btn_save_task"
         android:background="@drawable/circle"
         android:elevation="10dp"
         android:layout_alignParentBottom="true"
@@ -70,7 +67,7 @@
     <ImageButton
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:id="@+id/btn_remove_client"
+        android:id="@+id/btn_remove_task"
         android:background="@drawable/warnbtn"
         android:elevation="10dp"
         android:layout_alignParentBottom="true"
